fix: pr comment
DATATR-283

Signed-off-by: Jonathan Perchoc <jonathan.perchoc@ovhcloud.com>

--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-image/app-image.html
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-image/app-image.html
@@ -147,7 +147,7 @@
                 ></li>
                 <li
                     data-translate="pci_app_submit_select_image_info_message_2"
-                    data-translate-values="{ 'architectures': '<strong>	&lsquo;linux/amd64&rsquo;</strong>' }"
+                    data-translate-values="{ 'architectures': '<strong>&lsquo;' + $ctrl.APP_IMAGE_DOCKER_ARCHITECTURE + '&rsquo;</strong>' }"
                 ></li>
                 <li
                     data-translate="pci_app_submit_select_image_info_message_3"
