feat(iam): make types searchable
ref: MANAGER-11320, MANAGER-11279, MANAGER-11284
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/modules/iam/src/components/createPolicy/createPolicy.template.html
+++ b/packages/manager/modules/iam/src/components/createPolicy/createPolicy.template.html
@@ -77,19 +77,17 @@
             />
         </oui-field>
         <!-- </Name> -->
-
         <!-- <Resource> -->
         <iam-resource-select
+            data-ng-model="$ctrl.model.resources"
             data-on-change="$ctrl.onResourceChanged(change)"
             data-on-error="$ctrl.onError(error)"
             data-on-resource-types-confirm-remove="$ctrl.onResourceTypesConfirmRemove(item, index)"
             data-read-only="$ctrl.policy.readOnly"
             data-resources-label="{{:: 'iam_create_policy_form_resources_heading' | translate }}"
-            data-resources-model="$ctrl.model.resources"
             data-resources-name="resources"
             data-resources-required-message="{{:: 'iam_create_policy_form_resources_error_required' | translate }}"
             data-resource-types-label="{{:: 'iam_create_policy_form_resource_types_heading' | translate }}"
-            data-resource-types-model="$ctrl.model.resourceTypes"
             data-resource-types-name="resourceTypes"
         >
             <iam-resource-select-resource-types-header>
@@ -141,7 +139,7 @@
             data-error="$ctrl.onError(error)"
             data-name="actions"
             data-ng-model="$ctrl.model.actions"
-            data-resource-types="$ctrl.model.resourceTypes"
+            data-resource-types="$ctrl.model.resources.types"
             data-read-only="$ctrl.policy.readOnly"
         ></iam-action-select>
         <!-- </Actions> -->
