--- a/packages/manager/modules/iam/src/components/actionSelect/actionSelect.template.html
+++ b/packages/manager/modules/iam/src/components/actionSelect/actionSelect.template.html
@@ -31,7 +31,7 @@
     <!-- <Actions> -->
     <oui-collapsible
         data-ng-repeat="actionTree in $ctrl.actionTrees track by actionTree.value"
-        data-heading="{{ 'iam_action_select_action_' + actionTree.value + '_heading' | translate }}"
+        data-heading="{{:: actionTree.value  | iamResourceType }}"
         data-expanded="actionTree.expanded"
     >
         <!-- <CustomAction> -->
