fix(pcc.vmware): tracking implementation
ref: MANAGER-11553

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/add/dedicatedCloud-datacenter-add.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenter/add/dedicatedCloud-datacenter-add.html
@@ -34,7 +34,7 @@
         <button
             type="button"
             class="oui-button oui-button_l oui-button_link mr-3"
-            data-ng-click="$ctrl.goBack()"
+            data-ng-click="$ctrl.onCancel()"
         >
             <span
                 data-translate="dedicatedCloud_configuration_add_datacenter_cta_cancel"
