--- a/packages/super-components/generator/component/templates/package.json.hbs
+++ b/packages/super-components/generator/component/templates/package.json.hbs
@@ -1,10 +1,10 @@
 {
-  "name": "@ovhcloud/msc-stencil-tile",
+  "name": "@ovhcloud/msc-stencil-{{ packageName }}",
   "version": "1.0.0",
-  "description": "ODS Tile with custom content",
+  "description": "{{ description }}",
   "license": "BSD-3-Clause",
   "main": "dist/index.cjs.js",
-  "unpkg": "dist/msc-tile/msc-tile.esm.js",
+  "unpkg": "dist/{{ componentTag }}/{{ componentTag }}.esm.js",
   "module": "dist/index.js",
   "types": "dist/types/components.d.ts",
   "scripts": {
