fix(iam): remove one time binds
ref: MANAGER-11644
Signed-off-by: Yann Lojewski <yann.lojewski.ext@ovhcloud.com>

--- a/packages/manager/modules/iam/src/components/actionSelect/actionSelect.template.html
+++ b/packages/manager/modules/iam/src/components/actionSelect/actionSelect.template.html
@@ -31,7 +31,7 @@
     <!-- <Actions> -->
     <oui-collapsible
         data-ng-repeat="actionTree in $ctrl.actionTrees track by actionTree.value"
-        data-heading="{{:: actionTree.value  | iamResourceType }}"
+        data-heading="{{ actionTree.value  | iamResourceType }}"
         data-expanded="actionTree.expanded"
     >
         <!-- <CustomAction> -->
