fix(pcc.vmware): fix issue listing nsxt option
ref: MANAGER-11632

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/activation-status/activation-status.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/dashboard/tiles/options/components/activation-status/activation-status.html
@@ -16,6 +16,7 @@
     <div
         class="d-inline-block"
         data-ng-repeat="datacenter in ::$ctrl.datacentersState track by $index"
+        data-ng-if="datacenter.state === $ctrl.ACTIVATION_STATUS.enabled.name"
     >
         <span
             class="oui-badge oui-badge_info"
