--- a/packages/manager/apps/web/client/app/hosting/database/order/public/components/steps/db-categories-offers/template.html
+++ b/packages/manager/apps/web/client/app/hosting/database/order/public/components/steps/db-categories-offers/template.html
@@ -67,7 +67,6 @@
         data-id="db-engine-{{dbEngine.dbGroup}}"
         data-name="db-engine-{{dbEngine.dbGroup}}"
         data-model="dbCategory.selectEngine"
-        data-on-change="$ctrl.onDbCategoryClick({ dbCategory })"
         data-variant="light"
     >
         <oui-select-picker-label class="w-100 d-flex">
@@ -89,7 +88,7 @@
                 data-match="db"
                 data-model="dbEngine.selectEngineVersion"
                 data-placeholder="{{ 'web_hosting_database_order_components_db_categories_price_select_version_placeholder' | translate }}"
-                data-on-change="$ctrl.onDbCategoryClick({ dbCategory })"
+                data-on-change="$ctrl.onDbCategoryEngineClick({ dbEngine: modelValue })"
                 data-inline
             >
                 <span data-ng-bind=":: $item.dbVersion"></span>
