fix(pcc.vmware): display the nsx user right for nsx-t
ref: MANAGER-11684

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/users/dedicatedCloud-users.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/users/dedicatedCloud-users.html
@@ -12,6 +12,7 @@
         data-enable-user="$ctrl.enableUser"
         data-modify-user-rights="$ctrl.modifyUserRights"
         data-options-available="$ctrl.optionsAvailable"
+        data-has-nsx-option="$ctrl.hasNsxOption"
         data-password-reset="$ctrl.passwordReset"
         data-product-id="$ctrl.productId"
         data-set-message="$ctrl.setMessage"
