--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/users/vsphere-users/edit/vsphere-user-edit.html
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/users/vsphere-users/edit/vsphere-user-edit.html
@@ -101,7 +101,7 @@
         </oui-field>
 
         <oui-field
-            data-ng-if="$ctrl.optionsAvailable.includes('nsx')"
+            data-ng-if=":: $ctrl.hasNsxOption"
             data-label="{{:: 'dedicatedCloud_USER_nsx' | translate }}"
         >
             <div class="oui-switch">
