feat(spfemailpro): add spf on emailpro
Ticket: DTRSD-116877

Signed-off-by: maximeVaillant <maxime.vaillant@ovhcloud.com>

--- a/packages/manager/apps/telecom/src/app/telecom/pack/xdsl/access/statistics/statistics.html
+++ b/packages/manager/apps/telecom/src/app/telecom/pack/xdsl/access/statistics/statistics.html
@@ -281,16 +281,14 @@
                 <div
                     data-tuc-chartjs="XdslStatistics.errors.chart"
                     class="chart-container"
-                >
-                </div>
+                ></div>
 
                 <div
                     class="my-3 alert alert-warning"
                     role="alert"
                     data-ng-if="!XdslStatistics.errors.haveSeries && !XdslStatistics.errors.loading"
                     data-translate="xdsl_statistics_error"
-                >
-                </div>
+                ></div>
             </div>
         </li>
     </ul>
