--- a/packages/manager/modules/pci/src/projects/project/kubernetes/components/gateway-management/template.html
+++ b/packages/manager/modules/pci/src/projects/project/kubernetes/components/gateway-management/template.html
@@ -1,8 +1,14 @@
-<div class="oui-box oui-box_light border-0 pl-0 pt-0"
-     data-ng-init="gateway = $ctrl.network.gateway">
-
-    <h2 class="oui-field__label" data-translate="kubernetes_add_private_network_gateway_management_label"></h2>
-    <p data-translate="kubernetes_add_private_network_gateway_management_description"></p>
+<div
+    class="oui-box oui-box_light border-0 pl-0 pt-0"
+    data-ng-init="gateway = $ctrl.network.gateway"
+>
+    <h2
+        class="oui-field__label"
+        data-translate="kubernetes_add_private_network_gateway_management_label"
+    ></h2>
+    <p
+        data-translate="kubernetes_add_private_network_gateway_management_description"
+    ></p>
 
     <!--Gateway switch-->
     <oui-switch data-model="gateway.enabled"></oui-switch>
@@ -21,7 +27,8 @@
             data-ng-model="gateway.ip"
             data-ng-pattern="$ctrl.GATEWAY_IP_REGEX"
         />
-        <p data-translate="kubernetes_add_private_network_gateway_management_gateway_vrack_description"></p>
+        <p
+            data-translate="kubernetes_add_private_network_gateway_management_gateway_vrack_description"
+        ></p>
     </div>
-
 </div>
