--- a/packages/manager/modules/pci/src/projects/project/notebooks/add/components/notebook-privacy-settings/notebook-privacy-settings.html
+++ b/packages/manager/modules/pci/src/projects/project/notebooks/add/components/notebook-privacy-settings/notebook-privacy-settings.html
@@ -1,6 +1,5 @@
 <!--Notebook Privacy Networks -->
 <div class="row" data-ng-if="$ctrl.displayNotebookPrivacySettings">
-
     <!--Settings restricted-->
     <oui-select-picker
         class="d-inline-block col-md-6 col-xl-3 my-3"
@@ -33,8 +32,9 @@
         </oui-select-picker-section>
         <oui-select-picker-section class="text-danger">
             <span class="oui-icon oui-icon-warning"></span>
-            <span data-translate="pci_notebook_add_privacy_settings_item_public_warning"></span>
+            <span
+                data-translate="pci_notebook_add_privacy_settings_item_public_warning"
+            ></span>
         </oui-select-picker-section>
     </oui-select-picker>
-
 </div>
