--- a/packages/components/ng-ovh-contracts/src/summary/template.html
+++ b/packages/components/ng-ovh-contracts/src/summary/template.html
@@ -8,7 +8,8 @@
 </oui-checkbox>
 
 <ul>
-    <li data-ng-repeat="contract in $ctrl.contracts track by $index"
+    <li
+        data-ng-repeat="contract in $ctrl.contracts track by $index"
         data-ng-class="{'d-inline': $ctrl.inlineContracts }"
     >
         <a
@@ -17,14 +18,14 @@
             rel="noopener"
             target="_blank"
         >
-            <span data-ng-bind="contract.name"
-            >
-            </span>
-            <span class="m-0 oui-icon oui-icon-external-link"
-                  aria-hidden="true"
+            <span data-ng-bind="contract.name"> </span>
+            <span
+                class="m-0 oui-icon oui-icon-external-link"
+                aria-hidden="true"
             ></span>
-            <span class="sr-only"
-                  data-translate="order_contracts_label_new_tab"
+            <span
+                class="sr-only"
+                data-translate="order_contracts_label_new_tab"
             ></span>
         </a>
     </li>
