--- a/packages/manager/modules/pci/src/components/pci-maintenance-banner/template.html
+++ b/packages/manager/modules/pci/src/components/pci-maintenance-banner/template.html
@@ -1,21 +1,30 @@
-<oui-message data-ng-if="$ctrl.isDisplayableBanner()" data-type="warning" dismissable>
-
+<oui-message
+    data-ng-if="$ctrl.isDisplayableBanner()"
+    data-type="warning"
+    dismissable
+>
     <!--Project page-->
-    <span data-ng-if="$ctrl.isProjectPage"
-          data-translate="pci_projects_maintenance_banner_info_project_page"
-          data-translate-values="{ projectName: '<b>'+ $ctrl.projectName +'</b>' }">
+    <span
+        data-ng-if="$ctrl.isProjectPage"
+        data-translate="pci_projects_maintenance_banner_info_project_page"
+        data-translate-values="{ projectName: '<b>'+ $ctrl.projectName +'</b>' }"
+    >
     </span>
 
     <!--Product list page-->
-    <span data-ng-if="$ctrl.isListPage"
-          data-translate="pci_projects_maintenance_banner_info_list_page"
-          data-translate-values="{ productName: '<b>'+ $ctrl.productName +'</b>' }">
+    <span
+        data-ng-if="$ctrl.isListPage"
+        data-translate="pci_projects_maintenance_banner_info_list_page"
+        data-translate-values="{ productName: '<b>'+ $ctrl.productName +'</b>' }"
+    >
     </span>
 
     <!--Product dashboard page-->
-    <span data-ng-if="$ctrl.isDashboardPage"
-          data-translate="pci_projects_maintenance_banner_info_product_page"
-          data-translate-values="{ productServiceName: '<b>'+ $ctrl.productServiceName +'</b>' }">
+    <span
+        data-ng-if="$ctrl.isDashboardPage"
+        data-translate="pci_projects_maintenance_banner_info_product_page"
+        data-translate-values="{ productServiceName: '<b>'+ $ctrl.productServiceName +'</b>' }"
+    >
     </span>
 
     <p class="m-0">
@@ -24,7 +33,8 @@
             rel="noopener"
             data-translate="pci_projects_maintenance_banner_info_link"
             data-ng-href="{{:: $ctrl.steins[0].travaux }}"
-            data-ng-click="$ctrl.onMaintenanceLinkClick()">
-            ></a>
+            data-ng-click="$ctrl.onMaintenanceLinkClick()"
+        >
+        </a>
     </p>
 </oui-message>
