--- a/packages/manager/apps/telecom/src/app/telecom/telephony/service/contact/contact.html
+++ b/packages/manager/apps/telecom/src/app/telecom/telephony/service/contact/contact.html
@@ -237,10 +237,10 @@
                         <div class="col-md-6">
                             <div class="row">
                                 <oui-field
-                                    data-ng-if="!$ctrl.isServiceInUK()"
+                                    data-ng-if="!$ctrl.isServiceInUK"
                                     label="{{:: 'telephony_service_contact_zipcode' | translate }}*"
                                     error-messages="{ 'required': ('telephony_service_contact_must_fill' | translate) }"
-                                    class="col-md-6"
+                                    class="col-md-12"
                                 >
                                     <input
                                         data-ng-if="$ctrl.autoCompletePostCode.length === 0"
@@ -255,7 +255,7 @@
                                     />
                                     <oui-select
                                         data-ng-if="$ctrl.autoCompletePostCode.length > 0"
-                                        items="$ctrl.isServiceInUKautoCompletePostCode"
+                                        items="$ctrl.autoCompletePostCode"
                                         model="$ctrl.directoryForm.postCode"
                                         name="contactPostCode"
                                         id="contactPostCode"
@@ -267,12 +267,25 @@
                                 </oui-field>
 
                                 <oui-field
-                                    data-ng-if="$ctrl.isServiceInUK()"
+                                    data-ng-if="$ctrl.isServiceInUK"
                                     label="{{:: 'telephony_service_contact_outwardcode' | translate }}*"
-                                    error-messages="{ 'required': ('telephony_service_contact_must_fill' | translate) }"
-                                    data-ng-class="$ctrl.isServiceInUK() ? 'col-md-4' :  'col-md-12'"
+                                    error-messages="{ 'required': ('telephony_service_contact_must_fill' | translate), 'pattern': ('telephony_service_contact_bad_outward' | translate) }"
+                                    class="col-md-4"
                                 >
+                                    <input
+                                        data-ng-if="$ctrl.autoCompletePostCode.length === 0"
+                                        type="text"
+                                        id="contactOutwardPostCode"
+                                        name="contactOutwardPostCode"
+                                        class="oui-input"
+                                        required
+                                        data-ng-change="$ctrl.onUKPostCodeChange()"
+                                        data-ng-model="$ctrl.ukPostCode.outwardPostCode"
+                                        data-ng-model-options="{ debounce: 500 }"
+                                        data-ng-pattern="$ctrl.REGEX.outwardCode"
+                                    />
                                     <oui-select
+                                        data-ng-if="$ctrl.autoCompletePostCode.length > 0"
                                         items="$ctrl.autoCompletePostCode"
                                         model="$ctrl.ukPostCode.outwardPostCode"
                                         name="contactOutwardPostCode"
@@ -284,7 +297,7 @@
                                     </oui-select>
                                 </oui-field>
                                 <oui-field
-                                    data-ng-if="$ctrl.isServiceInUK()"
+                                    data-ng-if="$ctrl.isServiceInUK"
                                     label="{{:: 'telephony_service_contact_inwardcode' | translate }}*"
                                     error-messages="{ 'required': ('telephony_service_contact_must_fill' | translate), 'pattern': ('telephony_service_contact_bad_inward' | translate) }"
                                     class="col-md-4"
@@ -295,7 +308,7 @@
                                         name="contactInwardPostCode"
                                         class="oui-input"
                                         required
-                                        data-ng-pattern="/^\d[a-zA-Z]{2}$/"
+                                        data-ng-pattern="$ctrl.REGEX.inwardCode"
                                         data-ng-model="$ctrl.ukPostCode.inwardPostCode"
                                     />
                                 </oui-field>
