--- a/packages/manager/modules/pci/src/projects/new/payment/components/add/index.html
+++ b/packages/manager/modules/pci/src/projects/new/payment/components/add/index.html
@@ -30,7 +30,10 @@
             </oui-select-picker-label>
         </oui-select-picker>
     </div>
-
+    <p
+        data-ng-if="$ctrl.showSpecificCrossBorderSentenceForCardPayment()"
+        data-translate="pci_project_new_payment_method_add_credit_card_explain_ovh_transaction"
+    ></p>
     <!--Credit card info banner-->
     <oui-message
         class="text-justify"
