--- a/packages/manager/apps/telecom/src/app/telecom/telephony/billingAccount/billing/depositMovement/deposit-movement.html
+++ b/packages/manager/apps/telecom/src/app/telecom/telephony/billingAccount/billing/depositMovement/deposit-movement.html
@@ -247,7 +247,7 @@
                         <button
                             type="submit"
                             class="btn btn-primary"
-                            data-ng-disabled="!depositMovementForm.$valid || !(BillingAccountDepositMovementCtrl.amount > 0) || BillingAccountDepositMovementCtrl.canTransferSecurityDepositOnTarget || BillingAccountDepositMovementCtrl.loading.submit"
+                            data-ng-disabled="!depositMovementForm.$valid || !(BillingAccountDepositMovementCtrl.amount > 0) || !BillingAccountDepositMovementCtrl.canTransferSecurityDepositOnTarget || BillingAccountDepositMovementCtrl.loading.submit"
                             data-translate="telephony_group_billing_deposit_movement_submit"
                         ></button>
                     </div>
