feat(dedicated.account): add support ticket creation
ref: MANAGER-11582

Signed-off-by: sachinrameshn <sachin.ramesh@ovhcloud.com>

--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/new-account-form-component.html
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/new-account-form-component.html
@@ -67,6 +67,7 @@
                 data-mode="'modification'"
                 data-ng-if="$ctrl.siretFieldIsAvailable() && section === 'activity'"
                 data-rules="$ctrl.siretModuleRules"
+                data-is-indian-subsidiary="$ctrl.isIndianSubsidiary"
             ></siret-component>
         </div>
     </fieldset>
