--- a/packages/manager/modules/iam/src/iam.styles.scss
+++ b/packages/manager/modules/iam/src/iam.styles.scss
@@ -3,4 +3,9 @@
   .oui-autocomplete .mark {
     padding: 0 !important;
   }
+  .oui-header-tabs-item {
+    .oui-header-tabs__action {
+      padding: 0.5rem 1.5rem;
+    }
+  }
 }
